Add fix bugs in scripts.js

--- a/html/index.html
+++ b/html/index.html
@@ -3,19 +3,23 @@
         <link rel ="stylesheet" href ="css/skeleton.css">
         <link rel ="stylesheet" href ="css/normalize.css">
         <link rel ="stylesheet" href ="css/styles.css">
-        <script src = "jquery-1.11.2.js"></script>
-        <script src = "scripts.js"></script>
+        <script src = "js/jquery-1.11.2.js"></script>
+        <script src = "js/scripts.js"></script>
         <title>Triangle Checker</title>
     </head>
     <body>
         <div class ="container">
 
-            <h1>Enter Three Inputs!</h1>
+            <h1>Enter Three Inputs To See What Type Of Triangle They Will Make</h1>
             <form id = "triangleInput">
                 <div class = "row">
                     <div class = "six columns">
-                        <label for = "input">Input text!</label>
-                        <input id = "input" type = "number">
+                        <label for = "side1">Input Side 1</label>
+                        <input id = "side1" type = "number">
+                        <label for = "side2">Input Side 2</label>
+                        <input id = "side2" type = "number">
+                        <label for = "side3">Input Side 3</label>
+                        <input id = "side3" type = "number">
                         <button class ="button-primary">Calculate!</button>
                     </div>
                 </div>
