--- a/html/index.html
+++ b/html/index.html
@@ -15,11 +15,11 @@
                 <div class = "row">
                     <div class = "six columns">
                         <label for = "side1">Input Side 1</label>
-                        <input id = "side1" type = "number">
+                        <input id = "side1" type = "number" required>
                         <label for = "side2">Input Side 2</label>
-                        <input id = "side2" type = "number">
+                        <input id = "side2" type = "number" required>
                         <label for = "side3">Input Side 3</label>
-                        <input id = "side3" type = "number">
+                        <input id = "side3" type = "number" required>
                         <button class ="button-primary">Calculate!</button>
                     </div>
                 </div>
